# Gravitas

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CODING_STYLE.md  ENGINE_UI_AUTHORING_GUIDE.md  ENGINE_UI_RUNTIME_ARCHITECTURE.md  ENGINE_UI_RUNTIME_V1_AUDIT.md  README.md  build.sh  build_all.sh  build_release.sh  fast_build.sh  main  output.mpg  readme.md  receiver  run_gpu_rendering_benchmarks.sh
applications/: CMakeLists.txt
applications/DungeonCrawler/: BattleScene.cpp  BattleScene.h  CMakeLists.txt  DungeonFloorScene.cpp  DungeonFloorScene.h  DungeonManager.cpp  DungeonManager.h  DungeonMap.h  DungeonTestScene.cpp  DungeonTestScene.h  DungeonVisibilityState.cpp  DungeonVisibilityState.h  StairTestScene.cpp  StairTestScene.h  main.cpp
applications/DungeonCrawler/components/: BattleEncounterStateComponent.h  BattleResultTransitionData.h  BattleTransitionData.h  DebugCameraStateComponent.h  DungeonFloorSingleton.h  DungeonGameStateComponent.h  DungeonInputComponent.h  DungeonTileComponent.h  DungeonTransitionData.h  EnemyComponent.h  (+15 more)
applications/ECSTest/: CMakeLists.txt  main.cpp
applications/GravitasTetris/: CMakeLists.txt  TetrisAction.h  TetrisBlockComponent.hpp  TetrisCameraSystem.hpp  TetrisGameSystem.hpp  TetrisInputComponent.hpp  TetrisInputState.hpp  TetrisInputSystem.hpp  TetrisScene.hpp  TetrisScoreComponent.hpp  TetrisVisualSystem.hpp  main.cpp
applications/GtsPbrValidation/: CMakeLists.txt  main.cpp
applications/GtsRenderingBenchmarks/: CMakeLists.txt  main.cpp
applications/GtsScene1/: CMakeLists.txt  CameraControlSystem.hpp  DefaultScene.hpp  TransformAnimationSystem.hpp  main.cpp
applications/GtsScene2/: CMakeLists.txt  main.cpp
applications/GtsScene3/: CMakeLists.txt  CubeAnimationComponent.h  CubeAnimationSystem.hpp  GtsScene3.hpp  main.cpp
applications/Tetris/: CMakeLists.txt  RandomNumberGenerator.h  SlowFallAnimation.hpp  UDPReceive.cpp  main.cpp
applications/UDPReceiver/: CMakeLists.txt  Decoder.cpp  Decoder.h  FrameData.h  IMGUtility.cpp  IMGUtility.h  InputSenderThread.cpp  InputSenderThread.h  KeyboardInput.h  OnFrameDecodedEvent.h  ProcessingThread.cpp  ProcessingThread.h  ReceiverThread.cpp  ReceiverThread.h  SDLWindow.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  ThreadSafeQueueInstantiations.h  main.cpp
applications/ffmpeg-example/: compile.cmd
applications/testing/: CMakeLists.txt  InputReceiverThread.hpp  KeyboardInputData.h  RandomNumberGenerator.cpp  RotationAnimation.hpp  SlowFallAnimation.hpp  main.cpp
engine/: CMakeLists.txt  EngineConfig.h  GravitasEngine.hpp  GtsGameLoop.h  GtsPlatform.h  WorldTextCommandExtractor.hpp
engine/core/: CMakeLists.txt  ComponentStorage.hpp  Entity.h  IComponentStorage.h
engine/ecs_module/: CMakeLists.txt  ComponentStorage.hpp  ECSWorld.hpp  Entity.h  System.hpp
engine/graphics_module/: CMakeLists.txt  GTSDescriptorSetManager.hpp  GTSFramebufferManager.cpp  GTSFramebufferManager.hpp  Graphics.hpp  GraphicsConfig.h  Gravitas.hpp  GravitasInclude.h  GtsAnimation.hpp  GtsBufferService.hpp  GtsCamera.cpp  GtsEncoder.hpp  GtsFrameGrabber.hpp  GtsModelLoader.cpp  GtsOnKeyPressedEvent.hpp  GtsOnSceneUpdatedEvent.hpp  UDPReceive.h  UDPSend.cpp  UDPSend.h  VulkanLogicalDevice.hpp  VulkanPhysicalDevice.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderPass.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanShader.cpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanTexture.hpp
engine/modules/: CMakeLists.txt
graphics_engine/: CMakeLists.txt  EngineConstants.h  GLFWWindowSurface.cpp  GLFWWindowSurface.hpp  GTSDescriptorSetManager.cpp  GTSDescriptorSetManager.hpp  GTSFramebufferManager.cpp  GTSGLFWOutputWindow.cpp  GTSGLFWOutputWindow.hpp  GTSOutputWindow.hpp  Gravitas.cpp  Gravitas.hpp  GravitasEngineConstants.h  GravitasInclude.h  GravitasWindow.hpp  GtsAnimation.hpp  GtsBufferService.cpp  GtsBufferService.hpp  GtsCamera.cpp  GtsCamera.hpp  GtsEncoder.hpp  GtsFrameGrabber.hpp  GtsModelLoader.hpp  GtsOnFrameEndedEvent.hpp  GtsRenderableObject.cpp  GtsRenderableObject.hpp  GtsScene.hpp  GtsSceneNode.hpp  GtsSceneNodeOpt.h  GtsSceneNodeTransformEvent.hpp  QueueFamilyIndices.h  RenderableObject.cpp  RenderableObject.h  ReportData.h  UniformBufferObject.h  Vertex.h  VulkanInstance.cpp  VulkanInstance.hpp  VulkanLogicalDevice.cpp  VulkanLogicalDevice.hpp  (+14 more)
graphics_engine/components/: CMakeLists.txt
graphics_engine/instance/: CMakeLists.txt  VulkanInstance.cpp  VulkanInstance.hpp
graphics_engine/options/: CMakeLists.txt  GraphicsOptions.h
graphics_engine/output/: GTSGLFWOutputWindow.hpp
graphics_engine/scenegraph/: CMakeLists.txt  GtsRenderableObject.cpp
graphics_engine/surface/: CMakeLists.txt
tests/: CMakeLists.txt
tests/assets/: AssetSerializationTest.cpp  CookedAssetPipelineTest.cpp  GltfAssetImporterTest.cpp  ObjAssetImporterTest.cpp  RuntimeAssetPolicyTest.cpp
tests/benchmarks/: RenderingBenchmarkSupportTest.cpp
tests/core/: ProfileAccumulatorTest.cpp
tests/particles/: ParticleModuleAuthoringTest.cpp
tests/rendering/: FirstLitRendererArchitectureTest.cpp  GeometryPbrPreparationTest.cpp  MaterialRuntimeArchitectureTest.cpp  ObjectMaterialColorOwnershipTest.cpp  RenderLifecycleOwnershipTest.cpp
tests/runtime/: HeadlessRuntimeSmoke.cpp  HeadlessScreenshotRuntimeSmoke.cpp
tests/tools/: EditorFrameworkSmokeTest.cpp  VisualUiEditorRuntimeTest.cpp
tests/transform/: TransformHierarchyRuntimeTest.cpp
tests/ui/: UiAccessibilityRuntimeTest.cpp  UiAnimationRuntimeTest.cpp  UiAssetRuntimeTest.cpp  UiBindingRuntimeTest.cpp  UiCompositionRuntimeTest.cpp  UiDragDropRuntimeTest.cpp  UiEventPropagationRuntimeTest.cpp  UiFocusManagerRuntimeTest.cpp  UiInputDispatcherRuntimeTest.cpp  UiLayerRuntimeTest.cpp  UiLayoutRuntimeTest.cpp  UiLocalizationRuntimeTest.cpp  UiModalManagerRuntimeTest.cpp  UiMountRuntimeTest.cpp  UiNavigationRuntimeTest.cpp  UiPackageRuntimeTest.cpp  UiSerializationRuntimeTest.cpp  UiSurfaceRuntimeTest.cpp  UiThemeRuntimeTest.cpp  UiWidgetAssetRuntimeTest.cpp  UiWidgetRuntimeTest.cpp  VNFrontendRuntimeTest.cpp
(+1064 files in other folders)
